Fixed display issue with the ajax image; when on mobile and scrolled to bottom, the image would display twice: a blank green square and a green square with the ajax image.

--- a/client/src/style/ajaxImage.css
+++ b/client/src/style/ajaxImage.css
@@ -22,5 +22,5 @@
   width: 32px;
   height: auto;
   margin: 2px;
-  position: fixed;
+  padding: 2px 0 0 0;
 }
